# memory-leak-detector

./: .babelrc  .gitignore  README.md  manifest.json  manifest.json.backup  package-lock.json  package.json
action/: page_action.html
action/component/: header.js  memory-graph.js
background_scripts/: background.js
chrome/: devtools.html  devtools.js  manifest.json
chrome/option/: index.html  option.c15d31c9.js  option.c15d31c9.js.map
chrome/popup/: index.html
chrome/scripts/: content.js
data/: .RData  .Rhistory  anomalyDetection.js  datalayer-client-web.latest.js  javascript_prettier.js  main.R  minuteLogHeap  minuteLogHeap2.csv  result.js  tokopedia.csv
devchrome/option/: index.html  option.e31bb0bc.js  option.e31bb0bc.js.map
devtools/: devtools-page.html  devtools.js
devtools/panel/: index.html  panel.3bea1a5f.js  panel.3bea1a5f.js.map  panel.bed1ae43.js  panel.bed1ae43.js.map  panel.c39229e8.js  panel.c39229e8.js.map  panel.d69aada0.js  panel.d69aada0.js.map  panel.e31bb0bc.js  panel.html
memory-leak-detector/: content.js  manifest.json
popup/: memory-leak-detector.html
src/calculation/: Cargo.toml
src/calculation/src/: lib.rs  main.rs
src/context/: index.js
src/helpers/: menus.js  outlier_detection.js  outlier_detection_normal_distribution.ts  search_objects.js  worker_setup.js
src/option/: index.html  index.js
src/page_action/: action.098b1ab8.js  action.098b1ab8.js.map  action.1ea2c3d1.js  action.1ea2c3d1.js.map  action.3d71b718.js  action.3d71b718.js.map  action.40933d2c.js  action.40933d2c.js.map  action.55d3bef7.js  (+20 more)
(+18 files in other folders)
