[package]
name = "calculation"
version = "0.1.0"
authors = ["Mojila <me.mojila@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
average = "0.10.3"

[lib]
crate-type = ["cdylib"]