[package]
name = "calculation"
version = "0.1.0"
authors = ["Mojila <me.mojila@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[lib]
crate-type = ["cdylib"]